# oh-aws

./: README.md  pyproject.toml
src/ohaws/: main.py
