[project]
name = "ohaws"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aiden Fine", email = "aiden03fine@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
